Finalization of Overall Design

--- a/Final_Project - CataWard/about.html
+++ b/Final_Project - CataWard/about.html
@@ -15,118 +15,123 @@
 
 <body>
     <header>
-        <img src="assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <div class="dropdown-toggle">
-                        <label class="topics" for="dropdown-toggle">Disasters</label>
-                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
-                        <div class="dropdown-menu">
-                            <a href="contents/Typhoon.html">Typhoon</a>
-                            <a href="contents/Flood.html">Flood</a>
-                            <a href="contents/Earthquake.html">Earthquake</a>
-                            <a href="contents/Landslide.html">Landslide</a>
-                            <a href="contents/Tsunami.html">Tsunami</a>
+        <div class="header-container">
+            <img src="assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
+            <nav>
+                <ul>
+                    <li class="dropdown">
+                        <div class="dropdown-toggle">
+                            <label class="topics" for="dropdown-toggle">Disasters</label>
+                            <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                            <div class="dropdown-menu">
+                                <a href="contents/Typhoon.html">Typhoon</a>
+                                <a href="contents/Flood.html">Flood</a>
+                                <a href="contents/Earthquake.html">Earthquake</a>
+                                <a href="contents/Landslide.html">Landslide</a>
+                                <a href="contents/Tsunami.html">Tsunami</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-            </ul>
-        </nav>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
+        <div class="content-container">
 
-        <!-- Medyo may ano yung intro -->
-        <section class="intro">
-            <h1>Welcome to CataWard - Your Guide to Disaster Preparedness</h1>
-            <p> At <i>CataWard</i>, we understand the importance of being prepared for unexpected emergencies and
-                disasters. Whether it's natural disasters like typhoons, earthquakes, or floods, or man-made crises such
-                as
-                power outages or industrial accidents, being ready can make all the difference.</p>
-        </section>
+            <!-- Medyo may ano yung intro -->
+            <section class="intro">
+                <h1>Welcome to CataWard - Your Guide to Disaster Preparedness</h1>
+                <p> At <i>CataWard</i>, we understand the importance of being prepared for unexpected emergencies and
+                    disasters. Whether it's natural disasters like typhoons, earthquakes, or floods, or man-made crises such
+                    as
+                    power outages or industrial accidents, being ready can make all the difference.</p>
+            </section>
 
-        <section class="mission">
-            <h2>Mission</h2>
-            <p>Our mission is to empower individuals, families, and communities with the knowledge, resources, and tools
-                they need to effectively prepare for, respond to, and recover from emergencies. From creating
-                comprehensive emergency plans to assembling essential emergency kits, we're here to help you every step
-                of the way.
-            </p>
-            <p> Our site to access valuable information, practical tips, and expert advice on disaster preparedness
-                strategies, emergency communication plans, evacuation procedures, and more. Together, let's build
-                resilience and ensure the safety and well-being of ourselves and our loved ones in the face of
-                adversity.</p>
-        </section>
-
-
-        <section class="team">
-            <h2>Our Team</h2>
-
-            <div class="members">
-                <img src="assets/images/michael.png" alt="Michael N. Lonceras">
-                <h3>Michael N. Lonceras</h3>
-            </div>
+            <section class="mission">
+                <h2>Mission</h2>
+                <p>Our mission is to empower individuals, families, and communities with the knowledge, resources, and tools
+                    they need to effectively prepare for, respond to, and recover from emergencies. From creating
+                    comprehensive emergency plans to assembling essential emergency kits, we're here to help you every step
+                    of the way.
+                </p>
+                <p> Our site to access valuable information, practical tips, and expert advice on disaster preparedness
+                    strategies, emergency communication plans, evacuation procedures, and more. Together, let's build
+                    resilience and ensure the safety and well-being of ourselves and our loved ones in the face of
+                    adversity.</p>
+            </section>
 
 
-            <div class="members">
-                <img src="assets/images/johnrussel.png" alt="John Russel Soreda">
-                <h3>John Russel Soreda</h3>
-            </div>
+            <section class="team">
+                <h2>Our Team</h2>
 
-            <div class="members">
-                <img src="assets/images/christopher.png" alt="Christopher James Sayson">
-                <h3>Christopher James Sayson</h3>
-            </div>
-
-            <div class="members">
-                <img src="assets/images/valerie.png" alt="Valerie Joyce R. Soreda">
-                <h3>Valerie Joyce R. Soreda</h3>
-            </div>
-        </section>
+                <div class="members">
+                    <img src="assets/images/michael.png" alt="Michael N. Lonceras">
+                    <h3>Michael N. Lonceras</h3>
+                </div>
 
 
+                <div class="members">
+                    <img src="assets/images/johnrussel.png" alt="John Russel Soreda">
+                    <h3>John Russel Soreda</h3>
+                </div>
+
+                <div class="members">
+                    <img src="assets/images/christopher.png" alt="Christopher James Sayson">
+                    <h3>Christopher James Sayson</h3>
+                </div>
+
+                <div class="members">
+                    <img src="assets/images/valerie.png" alt="Valerie Joyce R. Soreda">
+                    <h3>Valerie Joyce R. Soreda</h3>
+                </div>
+            </section>
+
+        </div>
     </main>
 
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Hotline Number</h3>
-                <ul>
-                    <li>Emergency Hotline - #911</li>
-                    <li>Red Cross: #143</li>
-                    <li>National Complaint Hotline: #8888 </p>
-                    </li>
-                </ul>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Hotline Number</h3>
+                    <ul>
+                        <li>Emergency Hotline - #911</li>
+                        <li>Red Cross: #143</li>
+                        <li>National Complaint Hotline: #8888 </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Legal Information</h3>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <div class="footer-section">
-                <h3>Legal Information</h3>
-                <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Disclaimer</a></li>
-                </ul>
-            </div>
+            <p>&copy; 2024 CataWard. All rights reserved.</p>
         </div>
-        <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p>&copy; 2024 CataWard. All rights reserved.</p>
     </footer>
 </body>
 
