--- a/Final_Project - CataWard/contents/Tsunami.html
+++ b/Final_Project - CataWard/contents/Tsunami.html
@@ -7,117 +7,130 @@
     <link rel="icon" href="../assets/images/CataWard_Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
+    <link rel="stylesheet" href="../assets/styles/tsunami.css">
     <title>Tsunami | CataWard</title>
 </head>
 
 <body>
     <header>
-        <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <div class="dropdown-toggle">
-                        <label class="topics" for="dropdown-toggle">Disasters</label>
-                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
-                        <div class="dropdown-menu">
-                            <a href="Typhoon.html">Typhoon</a>
-                            <a href="Flood.html">Flood</a>
-                            <a href="Earthquake.html">Earthquake</a>
-                            <a href="Landslide.html">Landslide</a>
-                            <a href="Tsunami.html">Tsunami</a>
+        <div class="header-container">
+            <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
+            <nav>
+                <ul>
+                    <li class="dropdown">
+                        <div class="dropdown-toggle">
+                            <label class="topics" for="dropdown-toggle">Disasters</label>
+                            <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                            <div class="dropdown-menu">
+                                <a href="Typhoon.html">Typhoon</a>
+                                <a href="Flood.html">Flood</a>
+                                <a href="Earthquake.html">Earthquake</a>
+                                <a href="Landslide.html">Landslide</a>
+                                <a href="Tsunami.html">Tsunami</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <li><a href="../about.html">About Us</a></li>
-                <li><a href="../contact.html">Contacts</a></li>
-            </ul>
-        </nav>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../contact.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
+    <section class="image-section">
+        <img src="../assets/images/Tsunami.png" alt="Tsunami image">
+    </section>
+
     <main>
-        <h1>How to Survive a Tsunami</h1>
-        <p>A tsunami is a series of potent and perilous waves that are usually caused by earthquakes and underwater
-            disturbances. If your home is in a place where earthquakes often occur, it's important to know what to do
-            when a
-            Tsunami shows up. Don't worry, We got you covered!</p>
-        <img src="../assets/images/Tsunami.png" alt="Tsunami Waves">
+        <div class="content-container">
+            <h1>How to Survive a Tsunami?</h1>
+            <p>A tsunami is a series of potent and perilous waves that are usually caused by earthquakes and underwater disturbances. If your home is in a place where earthquakes often occur, it's important to know what to do when a Tsunami shows up. Don't worry, We got you covered!</p>
 
-        <h2>Tsunami Preparedness</h2>
-        <p>Be Tsunami Smart: Recognize the natural signs</p>
-        <ul>
-            <li>&#10004; Feel</li>
-            <li>&#10004; See</li>
-            <li>&#10004; Hear</li>
-        </ul>
-        <h2>How to Prepare for a Tsunami</h2>
+            <h2>Tsunami Preparedness</h2>
+            <p>Be Tsunami Smart: Recognize the natural signs</p>
+            <ul>
+                <li>&#10004; Feel</li>
+                <li>&#10004; See</li>
+                <li>&#10004; Hear</li>
+            </ul>
 
-        <p>Consider these steps before, during, and after a tsunami:</p>
+            <h2>How to Prepare for a Tsunami</h2>
+            <p>Consider these steps before, during, and after a tsunami:</p>
 
-        <h3>Before a Tsunami</h3>
-        <ul>
-            <li>Determine if your home is in a vulnerable zone near the coastline.</li>
-            <li>Know the quickest route to higher ground if you live near the beach or in low-lying areas.</li>
-            <li>Ensure everyone in your family knows how to recognize tsunami signs.</li>
-            <li>Keep emergency supplies like food, medicine, flashlights, radios, water, and first aid kits ready.</li>
-        </ul>
+            <h3>Before a Tsunami</h3>
+            <img src="../assets/images/before_tsunami.png" alt="Before Tsunami">
+            <ul>
+                <li>Determine if your home is in a vulnerable zone near the coastline.</li>
+                <li>Know the quickest route to higher ground if you live near the beach or in low-lying areas.</li>
+                <li>Ensure everyone in your family knows how to recognize tsunami signs.</li>
+                <li>Keep emergency supplies like food, medicine, flashlights, radios, water, and first aid kits ready.</li>
+            </ul>
 
-        <h3>During a Tsunami</h3>
-        <ul>
-            <li>If in a tsunami-prone area during an earthquake, prioritize personal safety by dropping, covering, and
-                holding onto sturdy furniture.</li>
-            <li>Move to higher ground immediately upon noticing natural signs or receiving official warnings.</li>
-            <li>Stay put if outside the tsunami zone and warned, but leave promptly if instructed.</li>
-            <li>If in water, grab onto floating objects like rafts or tree trunks.</li>
-            <li>In a boat, face the waves and sail away from the coast; in a harbor, head inland.</li>
-        </ul>
+            
+            <h3>During a Tsunami</h3>
+            <img src="../assets/images/during_tsunami.png" alt="During Tsunami">
+            <ul>
+                <li>If in a tsunami-prone area during an earthquake, prioritize personal safety by dropping, covering, and holding onto sturdy furniture.</li>
+                <li>Move to higher ground immediately upon noticing natural signs or receiving official warnings.</li>
+                <li>Stay put if outside the tsunami zone and warned, but leave promptly if instructed.</li>
+                <li>If in water, grab onto floating objects like rafts or tree trunks.</li>
+                <li>In a boat, face the waves and sail away from the coast; in a harbor, head inland.</li>
+            </ul>
 
-        <h3>After a Tsunami</h3>
-        <ul>
-            <li>Listen to local alerts and obey authorities' instructions regarding safe areas and shelter locations.
-            </li>
-            <li>Reserve phone calls for emergencies and use text messages or social media for communication.</li>
-            <li>Avoid walking through floodwater, which may contain hazardous debris and be deeper than it appears.</li>
-            <li>Beware of electrocution risks from fallen power lines; avoid touching wet electrical equipment.</li>
-            <li>Avoid damaged buildings, roads, and bridges.</li>
-            <li>If injured, contact healthcare providers and seek shelter; call 9-1-1 for emergencies.</li>
-        </ul>
+            <h3>After a Tsunami</h3>
+            <img src="../assets/images/after_tsunami.png" alt="After Tsunami">
+            <ul>
+                <li>Listen to local alerts and obey authorities' instructions regarding safe areas and shelter locations.</li>
+                <li>Reserve phone calls for emergencies and use text messages or social media for communication.</li>
+                <li>Avoid walking through floodwater, which may contain hazardous debris and be deeper than it appears.</li>
+                <li>Beware of electrocution risks from fallen power lines; avoid touching wet electrical equipment.</li>
+                <li>Avoid damaged buildings, roads, and bridges.</li>
+                <li>If injured, contact healthcare providers and seek shelter; call 9-1-1 for emergencies.</li>
+            </ul>
+
+            <a href="#" class="back-to-top">↑ Back to Top</a>
+        </div>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Hotline Number</h3>
-                <ul>
-                    <li>Emergency Hotline - #911</li>
-                    <li>Red Cross: #143</li>
-                    <li>National Complaint Hotline: #8888 </p></li>
-                </ul>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Hotline Number</h3>
+                    <ul>
+                        <li>Emergency Hotline - #911</li>
+                        <li>Red Cross: #143</li>
+                        <li>National Complaint Hotline: #8888 </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Legal Information</h3>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About Us</a></li>
-                    <li><a href="../contact.html">Contact Us</a></li>
-                </ul>
+            
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <div class="footer-section">
-                <h3>Legal Information</h3>
-                <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Disclaimer</a></li>
-                </ul>
-            </div>
+            <p>&copy; 2024 CataWard. All rights reserved.</p>
         </div>
-        <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p>&copy; 2024 CataWard. All rights reserved.</p>
     </footer>
 
 </body>
