--- a/Final_Project - CataWard/contents/Typhoon.html
+++ b/Final_Project - CataWard/contents/Typhoon.html
@@ -7,150 +7,170 @@
     <link rel="icon" href="../assets/images/CataWard_Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
+    <link rel="stylesheet" href="../assets/styles/typhoon.css">
     <title>Typhoon | CataWard</title>
 </head>
 
 <body>
     <header>
-        <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <div class="dropdown-toggle">
-                        <label class="topics" for="dropdown-toggle">Disasters</label>
-                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
-                        <div class="dropdown-menu">
-                            <a href="Typhoon.html">Typhoon</a>
-                            <a href="Flood.html">Flood</a>
-                            <a href="Earthquake.html">Earthquake</a>
-                            <a href="Landslide.html">Landslide</a>
-                            <a href="Tsunami.html">Tsunami</a>
+        <div class="header-container">
+            <img src="../assets/images/Cataward-Logo.png" alt="CataWard Logo" class="logo">
+            <nav>
+                <ul>
+                    <li class="dropdown">
+                        <div class="dropdown-toggle">
+                            <label class="topics" for="dropdown-toggle">Disasters</label>
+                            <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                            <div class="dropdown-menu">
+                                <a href="Typhoon.html">Typhoon</a>
+                                <a href="Flood.html">Flood</a>
+                                <a href="Earthquake.html">Earthquake</a>
+                                <a href="Landslide.html">Landslide</a>
+                                <a href="Tsunami.html">Tsunami</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <li><a href="../about.html">About Us</a></li>
-                <li><a href="../contact.html">Contacts</a></li>
-            </ul>
-        </nav>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../contact.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
+    <section class="image-section">
+        <img src="../assets/images/typhoon1.jpg" alt="image">
+    </section>
+
     <main>
-        <h1>How to Survive a Typhoon?</h1>
-        <p>In the occurence of a typhoon, a strong and possibly destructive tropical cyclone, it is critical for
-            inhabitants
-            in susceptible locations to prepare by securing their houses, obtaining emergency supplies, and obeying
-            evacuation instructions to guarantee their safety and welfare. Rest confident that by keeping educated and
-            adopting proactive actions, folks may efficiently handle a typhoon's obstacles and emerge resilient.</p>
-        <img src="../assets/images/Typhoon.png" alt="TyphoonPH">
+        <div class="content-container">
+            <h1>What is Typhoon?</h1>
+            <p>A typhoon is a powerful tropical cyclone that occurs in the Northwest Pacific Ocean, characterized by strong winds, heavy rainfall, and the potential to cause significant damage through flooding, storm surges, and landslides. Typhoons are similar to hurricanes and cyclones but are specifically named for storms occurring in this region. These intense weather systems form over warm ocean waters and can have devastating impacts on coastal and inland communities.</p>
+            <h1>How to Survive a Typhoon?</h1>
+            <p>In the occurence of a typhoon, a strong and possibly destructive tropical cyclone, it is critical for
+                inhabitants
+                in susceptible locations to prepare by securing their houses, obtaining emergency supplies, and obeying
+                evacuation instructions to guarantee their safety and welfare. Rest confident that by keeping educated and
+                adopting proactive actions, folks may efficiently handle a typhoon's obstacles and emerge resilient.</p>
+                
 
-        <h2>How to Prepare for a Typhoon?</h2>
-        <p>Consider these steps before, during, and after a Typhoon:</p>
+            <h2>How to Prepare for a Typhoon?</h2>
+            <p>Consider these steps before, during, and after a Typhoon:</p>
 
-        <h3>Before a Typhoon</h3>
-        <ul>
-            <h4>1. Stay Informed</h4>
-            <li>Watch out for weather updates and predictions from reputable sites like the Philippine Atmospheric,
-                Geophysical and Astronomical Services Administration (PAGASA).</li>
-            <li>Pay attention to typhoon signals and warnings issued by local authorities.</li>
-            <h4>2. Develop a Family Emergency Plan:</h4>
-            <li>Together with your family, make an emergency plan that includes meeting locations, evacuation routes,
-                and
-                communication techniques.</li>
-            <li>Assign duties to each family member and make sure that everyone is aware of what to do in an emergency.
-            </li>
-            <h4>3. Prepare an Emergency Kit</h4>
-            <li>Put together a typhoon emergency kit with vital supplies including water, non-perishable food,
-                flashlights,
-                batteries, first aid supplies, prescription drugs, cash, crucial papers, and personal hygiene items.
-            </li>
-            <li>Pack food, drink, medicine, and pet carriers among other supplies.</li>
-            <h4>4.Secure Your Home</h4>
-            <li>Use plywood or storm shutters to strengthen doors and windows.</li>
-            <li>In order to reduce the possibility of falling debris, prune trees and remove dead branches.</li>
-            <li>Safeguard garden equipment, patio furniture, and other items that are unsecured and might fly in high
-                gusts.
-            </li>
-            <h4>5. Identify Evacuation Routes and Shelters</h4>
-            <li>Be aware of the the location of the closest evacuation centers.</li>
-            <li>Learn the alternate routes and evacuation routes in case of road closures.inds.</li>
-        </ul>
+            <img src="../assets/images/beforetyphoon.jpg" alt="TyphoonPH">
+            <h3>Before a Typhoon</h3>
+            <ul>
+                <h4>1. Stay Informed</h4>
+                <li>Watch out for weather updates and predictions from reputable sites like the Philippine Atmospheric,
+                    Geophysical and Astronomical Services Administration (PAGASA).</li>
+                <li>Pay attention to typhoon signals and warnings issued by local authorities.</li>
+                <h4>2. Develop a Family Emergency Plan:</h4>
+                <li>Together with your family, make an emergency plan that includes meeting locations, evacuation routes,
+                    and
+                    communication techniques.</li>
+                <li>Assign duties to each family member and make sure that everyone is aware of what to do in an emergency.
+                </li>
+                <h4>3. Prepare an Emergency Kit</h4>
+                <li>Put together a typhoon emergency kit with vital supplies including water, non-perishable food,
+                    flashlights,
+                    batteries, first aid supplies, prescription drugs, cash, crucial papers, and personal hygiene items.
+                </li>
+                <li>Pack food, drink, medicine, and pet carriers among other supplies.</li>
+                <h4>4.Secure Your Home</h4>
+                <li>Use plywood or storm shutters to strengthen doors and windows.</li>
+                <li>In order to reduce the possibility of falling debris, prune trees and remove dead branches.</li>
+                <li>Safeguard garden equipment, patio furniture, and other items that are unsecured and might fly in high
+                    gusts.
+                </li>
+                <h4>5. Identify Evacuation Routes and Shelters</h4>
+                <li>Be aware of the the location of the closest evacuation centers.</li>
+                <li>Learn the alternate routes and evacuation routes in case of road closures.inds.</li>
+            </ul>
 
-        <h3>During a Typhoon</h3>
-        <ul>
-            <h4>1.Stay Indoors and Seek Shelter</h4>
-            <li>Use plywood or storm shutters to strengthen doors and windows.</li>
-            <li>In order to reduce the possibility of falling debris, prune trees and remove dead branches.</li>
-            <li>Safeguard garden equipment, patio furniture, and other items that are unsecured and might fly in high
-                gusts.
-            </li>
-            <h4>2. Monitor Updates</h4>
-            <li>Use cellphone, television, or radio alerts to stay updated on the typhoon's progress.</li>
-            <li>Observe the guidelines and cautions that the local authorities have provided.</li>
-            <h4>3. Keep Emergency Supplies Accessible</h4>
-            <li>Keep enough supplies in your emergency kit to last several days, and keep it easily accessible.</li>
-            <li>To reduce the chance of a fire, use flashlights instead of candles.</li>
-            <h4>4. Stay Away from Flooded Areas</h4>
-            <li>Steer clear of flooded places whether driving or walking since the water may be deeper or flowing more
-                quickly than it looks.</li>
-        </ul>
+            <img src="../assets/images/duringtyphoon.jpg" alt="TyphoonPH">
+            <h3>During a Typhoon</h3>
+            <ul>
+                <h4>1.Stay Indoors and Seek Shelter</h4>
+                <li>Use plywood or storm shutters to strengthen doors and windows.</li>
+                <li>In order to reduce the possibility of falling debris, prune trees and remove dead branches.</li>
+                <li>Safeguard garden equipment, patio furniture, and other items that are unsecured and might fly in high
+                    gusts.
+                </li>
+                <h4>2. Monitor Updates</h4>
+                <li>Use cellphone, television, or radio alerts to stay updated on the typhoon's progress.</li>
+                <li>Observe the guidelines and cautions that the local authorities have provided.</li>
+                <h4>3. Keep Emergency Supplies Accessible</h4>
+                <li>Keep enough supplies in your emergency kit to last several days, and keep it easily accessible.</li>
+                <li>To reduce the chance of a fire, use flashlights instead of candles.</li>
+                <h4>4. Stay Away from Flooded Areas</h4>
+                <li>Steer clear of flooded places whether driving or walking since the water may be deeper or flowing more
+                    quickly than it looks.</li>
+            </ul>
 
-        <h3>After a Typhoon</h3>
-        <ul>
-            <h4>1. Assess Damage</h4>
-            <li>Take cautious when handling debris and downed electrical wires, and inspect your property for damage.
-            </li>
-            <li>For insurance purposes, take pictures of any damage.</li>
-            <h4>2. Contact Authorities</h4>
-            <li>Please notify local authorities of any emergencies or risks, such as flooding, landslides, or downed
-                power
-                lines.</li>
-            <h4>3. Assist Others</h4>
-            <li>Check on your neighbors, especially the elderly and fragile, and provide aid as required.</li>
-            <h4>4. Clean Up Safely</h4>
-            <li>To avoid future floods, safely remove trash from your home and clean clogged drains and gutters.</li>
-            <li>Exercise caution around tainted water, sharp objects, and shaky buildings.</li>
-            <h4>5. Stay Informed</h4>
-            <li>Continue keeping up with PAGASA and local authorities' updates on current weather conditions and
-                recovery
-                operation.</li>
-        </ul>
+            <img src="../assets/images/aftertyphoon.jpg" alt="TyphoonPH">
+            <h3>After a Typhoon</h3>
+            <ul>
+                <h4>1. Assess Damage</h4>
+                <li>Take cautious when handling debris and downed electrical wires, and inspect your property for damage.
+                </li>
+                <li>For insurance purposes, take pictures of any damage.</li>
+                <h4>2. Contact Authorities</h4>
+                <li>Please notify local authorities of any emergencies or risks, such as flooding, landslides, or downed
+                    power
+                    lines.</li>
+                <h4>3. Assist Others</h4>
+                <li>Check on your neighbors, especially the elderly and fragile, and provide aid as required.</li>
+                <h4>4. Clean Up Safely</h4>
+                <li>To avoid future floods, safely remove trash from your home and clean clogged drains and gutters.</li>
+                <li>Exercise caution around tainted water, sharp objects, and shaky buildings.</li>
+                <h4>5. Stay Informed</h4>
+                <li>Continue keeping up with PAGASA and local authorities' updates on current weather conditions and
+                    recovery
+                    operation.</li>
+            </ul>
+
+            <a href="#" class="back-to-top">↑ Back to Top</a>
+        </div>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Hotline Number</h3>
-                <ul>
-                    <li>Emergency Hotline - #911</li>
-                    <li>Red Cross: #143</li>
-                    <li>National Complaint Hotline: #8888 </p></li>
-                </ul>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Hotline Number</h3>
+                    <ul>
+                        <li>Emergency Hotline - #911</li>
+                        <li>Red Cross: #143</li>
+                        <li>National Complaint Hotline: #8888 </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about.html">About Us</a></li>
+                        <li><a href="../contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Legal Information</h3>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About Us</a></li>
-                    <li><a href="../contact.html">Contact Us</a></li>
-                </ul>
+            
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <div class="footer-section">
-                <h3>Legal Information</h3>
-                <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Disclaimer</a></li>
-                </ul>
-            </div>
+            <p>&copy; 2024 CataWard. All rights reserved.</p>
         </div>
-        <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p>&copy; 2024 CataWard. All rights reserved.</p>
     </footer>
 
 
